--- a/templates/partials/_horizental-navbar.html.twig
+++ b/templates/partials/_horizental-navbar.html.twig
@@ -52,7 +52,7 @@
                     </div>
                 </li>
                 <li class="nav-item nav-user-icon">
-                    <a class="nav-link" href="{{ path('app_login') }}">
+                    <a class="nav-link" href="{{ path('app_logout') }}">
                         Déconnexion
                     </a>
                 </li>
