--- a/templates/service/inscription.html.twig
+++ b/templates/service/inscription.html.twig
@@ -25,15 +25,12 @@
                                     {{form_row(form.username) }}
                                 </div>
                                 <div class="form-group">
-                                    {{form_row(form.password) }}
+                                    {{form_row(form.plainpassword) }}
                                 </div>
                                 <div class="form-group">
                                     {{form_row(form.service) }}
                                 </div>
-                                <div class="form-group">
-                                    {{form_row(form.role) }}
-                                </div>
-
+                        
                                 <div class="mt-3">
                                     <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Ajouter</button>
                                 </div>
