--- a/templates/service/login.html.twig
+++ b/templates/service/login.html.twig
@@ -31,17 +31,20 @@
                                 <img src="{{ asset('images/Logo-Integral2.png') }}" alt="logo">
                             </div>
                             <h6 class="font-weight-light">Se connecter pour continuer.</h6>
-                            {{ form_start(form) }}
-                            <div class="form-group">
-                                {{ form_row(form.username) }}
-                            </div>
-                            <div class="form-group">
-                                {{ form_row(form.password) }}
-                            </div>
-                            <div class="mt-3">
-                                <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Se connecter</button>
-                            </div>
-                            {{ form_end(form) }}
+                            <form method="post">
+                                <div class="form-group">
+                                    <label for="">Nom d'utilisateur</label>
+                                    <input type="text" class="form-control form-control-lg" name="username" placeholder="Nom d'utilisateur">
+                                </div>
+                                <input type="hidden" name="token_csrf" value="{{ csrf_token('edo_login_form') }}">
+                                <div class="form-group">
+                                    <label for="">Mot de passe</label>
+                                    <input type="password" class="form-control form-control-lg" name="password" placeholder="Nom d'utilisateur">
+                                </div>
+                                <div class="mt-3">
+                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Se connecter</button>
+                                </div>
+                            </form>
                             <div class="my-2 d-flex justify-content-between align-items-center">
                                 <a href="{{ path('app_reset_password') }}" class="auth-link text-black">Mot de passe oublié ?</a>
                             </div>
