--- a/templates/service/service.html.twig
+++ b/templates/service/service.html.twig
@@ -3,23 +3,10 @@
 {% block title %} PromoPub-Integral| {{ service.nomService }}{% endblock %}
 
 {% block content %}
-    <div style="margin-left: 40%;">
+  <div style="margin-left: 40%;">
         <button type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService }}</button>
     </div>
-    <div class="row" style="margin-left: 30%; margin-top: 10px; margin-bottom: 10px;">
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service_add_dossier',{service:service.id}) }}"><button type="button" class="btn btn-success btn-rounded btn-fw">Ajouter</button></a>
-        </div>
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service_cloturer_dossier',{service:service.id}) }}"><button type="button" class="btn btn-warning btn-rounded btn-fw">Clôturer</button></a>
-        </div>
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service_historique_dossier',{service:service.id}) }}"><button type="button" class="btn btn-info btn-rounded btn-fw">Historique</button></a>
-        </div>
-    </div>
+{% include "service/menu.html.twig" %}
     <br>
     <br>
     <div class="col-lg-12 col-md-12 col-xs-12 grid-margin stretch-card">
@@ -52,9 +39,8 @@
                                     <td>{{ dossiers.nomDossier }}</td>
                                     <td>{{ dossiers.createdAt|date('d/m/Y') }}</td>
                                     <td>
-                                        <a  href="{{ path('app_service_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-success"><i class="fa fa-eye"  data-toggle="tooltip" data-placement="top" title="Voir plus"></i></label></a>
-                                        <a  href="{{ path('app_service_update_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-warning"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Modifier"></i></label></a>
-                                        <a  href="{{ path('app_service_ajouter_devis',{dossier:dossiers.id, service:service.nomService, dossierNom:dossiers.nomDossier}) }}"><label class="badge badge-info"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Devis"></i></label></a>
+                                        <a  href="{{ path('app_service_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-success mr-1"><i class="fa fa-eye"  data-toggle="tooltip" data-placement="top" title="Voir plus"></i></label></a>
+                                        <a  href="{{ path('app_service_update_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-warning mr-1"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Modifier"></i></label></a>
                                         <a  href="#"><label class="badge badge-danger"><i class="fa fa-trash-o "  data-toggle="tooltip" data-placement="top" title="Supprimer"></i></label></a>
                                     </td>
                                     <td><label class="badge badge-info">En cours</label></td>
