worked on pao specification

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="{{ asset('css/horizontal-layout-light/style.css') }}">
     <link rel="stylesheet" href="{{ asset('vendors/font-awesome/css/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendors/simple-line-icons/css/simple-line-icons.css') }}">
     <!-- endinject -->
     <link rel="shortcut icon" href="{{ asset('images/Logo-Promo-Pub2.png') }}" />
     {% block link %}  {% endblock %}
@@ -32,6 +33,7 @@
         <div class="main-panel">
             <div class="content-wrapper">
                 <div class="row">
+                    
                      {% block content %}{% endblock  %}
                 </div>
             </div>
