--- a/templates/partials/_horizental-navbar.html.twig
+++ b/templates/partials/_horizental-navbar.html.twig
@@ -53,12 +53,12 @@
                 </li>
                 <li class="nav-item nav-user-icon">
                     <a class="nav-link" href="{{ path('app_logout') }}">
-                        Déconnexion
+                        <i class="icon-logout"></i>
                     </a>
                 </li>
                 <li class="nav-item nav-settings d-none d-lg-flex">
-                    <a class="nav-link" href="{{ path('app_inscription') }}">
-                        <i class="mdi mdi-dots-horizontal">Inscription</i>
+                    <a class="nav-link" href="{{ path('app_user_liste') }}">
+                        <i class="fa fa-address-book"></i>
                     </a>
                 </li>
             </ul>
