--- a/templates/home/inscription.html.twig
+++ b/templates/home/inscription.html.twig
@@ -3,7 +3,18 @@
 {% block title %}Inscription | PromoPub-Integral{% endblock %}
 
 {% block content %}
+    <div style="margin-left: 40%;">
+        <button type="button" class="btn btn-primary btn-rounded btn-fw">Utilisateur</button>
+    </div>
+    <div class="row" style="margin-left: 30%; margin-top: 10px; margin-bottom: 10px;">
+        <div class="col-md-6 col-lg-6 col-sm-6" style=" margin-bottom: 5px;">
+            <a href="{{ path('app_user_inscription')}}"><button type="button" class="btn btn-success btn-rounded btn-fw">Ajouter</button></a>
+        </div>
 
+        <div class="col-md-6 col-lg-6 col-sm-6" style=" margin-bottom: 5px;">
+            <a href="{{ path('app_user_liste')}}"><button type="button" class="btn btn-warning btn-rounded btn-fw">Consulter</button></a>
+        </div>
+    </div>
         <div class="main-panel">
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
@@ -13,7 +24,7 @@
                                 <img src="{{ asset('images/Logo-Promo-Pub2.png') }}" alt="logo">
                                 <img src="{{ asset('images/Logo-Integral2.png') }}" alt="logo">
                             </div>
-                            <h6 class="font-weight-light">Ajouter un utilisateur en quelques étapes</h6>
+                            {# <h6 class="font-weight-light">Ajouter un utilisateur en quelques étapes</h6> #}
                                 {{ form_start(form) }}
                                 <div class="form-group">
                                     {{ form_row(form.nom) }}
@@ -25,14 +36,14 @@
                                     {{form_row(form.username) }}
                                 </div>
                                 <div class="form-group">
-                                    {{form_row(form.plainpassword) }}
+                                    {{form_row(form.password) }}
                                 </div>
                                 <div class="form-group">
                                     {{form_row(form.service) }}
                                 </div>
                         
                                 <div class="mt-3">
-                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Ajouter</button>
+                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Enrégistrer</button>
                                 </div>
                             {{ form_end(form) }}
                         </div>
