--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -46,7 +46,7 @@
                                 </div>
                             </form>
                             <div class="my-2 d-flex justify-content-between align-items-center">
-                                <a href="{{ path('app_reset_password') }}" class="auth-link text-black">Mot de passe oublié ?</a>
+                                <a href="{{ path('app_user_reset_password') }}" class="auth-link text-black">Mot de passe oublié ?</a>
                             </div>
                     </div>
                 </div>
