--- a/templates/service/service.html.twig
+++ b/templates/service/service.html.twig
@@ -3,9 +3,12 @@
 {% block title %} PromoPub-Integral| {{ service.nomService }}{% endblock %}
 
 {% block content %}
-  <div style="margin-left: 40%;">
-        <button type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService }}</button>
-    </div>
+
+  <div class="row" style="margin-left: 40%;">
+    <div>
+         <button type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService | upper }}</button>
+    </div>  
+  </div>
 {% include "service/menu.html.twig" %}
     <br>
     <br>
@@ -41,7 +44,7 @@
                                     <td>
                                         <a  href="{{ path('app_service_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-success mr-1"><i class="fa fa-eye"  data-toggle="tooltip" data-placement="top" title="Voir plus"></i></label></a>
                                         <a  href="{{ path('app_service_update_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-warning mr-1"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Modifier"></i></label></a>
-                                        <a  href="#"><label class="badge badge-danger"><i class="fa fa-trash-o "  data-toggle="tooltip" data-placement="top" title="Supprimer"></i></label></a>
+                                        <a  href="{{ path('app_supprimer_dossier',{dossier:dossiers.id,service:service.id})}}"><label class="badge badge-danger"><i class="fa fa-trash-o "  data-toggle="tooltip" data-placement="top" title="Supprimer"></i></label></a>
                                     </td>
                                     <td><label class="badge badge-info">En cours</label></td>
                                 </tr>
