PAo et Direction termine

--- a/templates/home/inscription.html.twig
+++ b/templates/home/inscription.html.twig
@@ -43,7 +43,7 @@
                                 </div>
                         
                                 <div class="mt-3">
-                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Enrégistrer</button>
+                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Enregistrer</button>
                                 </div>
                             {{ form_end(form) }}
                         </div>
