--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -2,7 +2,5 @@
     <footer class="footer">
         <div class="d-sm-flex justify-content-center justify-content-sm-between">
             <span class="text-center text-sm-left d-block d-sm-inline-block">Copyright &copy; 2020. All rights reserved. </span>
-            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Designed by: <a href="https://www.promopub-integral.com/" target="_blank">Promopub</a>. </span>
-        </div>
-    </footer>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Designed by: <a href="#" target="_blank">EdoTensei
 </div>
