--- a/templates/service/menu.html.twig
+++ b/templates/service/menu.html.twig
@@ -1,17 +1,6 @@
-  
-    <div class="row" style="margin-left: 30%; margin-top: 10px; margin-bottom: 10px; text-align:center;">
-        <div class="col-3" >
-            <a href="{{ path('app_service_add_dossier',{service:service.id}) }}"><button type="button" class="btn btn-success btn-rounded btn-fw mr-1">Ajouter</button></a>
+    <div style="margin-left:38%;" >
+        <div class="mr-1 mb-1 mt-1" >
+            <a href="{{ path('app_service_add_dossier',{service:service.id}) }}"><button type="button" class="btn btn-success btn-rounded btn-fw">Ajouter</button></a>
+            <a href="{{ path('app_service_cloturer_dossier',{service:service.id}) }}"><button type="button" class="btn btn-warning btn-rounded btn-fw">Clôturer</button></a>
         </div>
-
-        <div class="col-3" >
-            <a href="{{ path('app_service_cloturer_dossier',{service:service.id}) }}"><button type="button" class="btn btn-warning btn-rounded btn-fw mr-1">Clôturer</button></a>
-        </div>
-
-        <div class="col-3">
-            <a href="{{ path('app_service_historique_dossier',{service:service.id}) }}"><button type="button" class="btn btn-info btn-rounded btn-fw mr-1">Créa</button></a>
-        </div> 
-        <div class="col-3">
-            <a href="{{ path('app_service_historique_dossier',{service:service.id}) }}"><button type="button" class="btn btn-light btn-rounded btn-fw">Adaptation</button></a>
-        </div>
-    </div>
+   </div>
