--- a/templates/service/service.html.twig
+++ b/templates/service/service.html.twig
@@ -4,14 +4,11 @@
 
 {% block content %}
 
-  <div class="row" style="margin-left: 40%;">
-    <div>
-         <button type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService | upper }}</button>
-    </div>  
-  </div>
-{% include "service/menu.html.twig" %}
-    <br>
-    <br>
+    <div  style="margin-left:40%;">
+        <button  type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService | upper }}</button>
+    </div>
+    {% include "service/menu.html.twig" %}
+    <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -43,8 +40,10 @@
                                     <td>{{ dossiers.createdAt|date('d/m/Y') }}</td>
                                     <td>
                                         <a  href="{{ path('app_service_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-success mr-1"><i class="fa fa-eye"  data-toggle="tooltip" data-placement="top" title="Voir plus"></i></label></a>
-                                        <a  href="{{ path('app_service_update_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-warning mr-1"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Modifier"></i></label></a>
-                                        <a  href="{{ path('app_supprimer_dossier',{dossier:dossiers.id,service:service.id})}}"><label class="badge badge-danger"><i class="fa fa-trash-o "  data-toggle="tooltip" data-placement="top" title="Supprimer"></i></label></a>
+                                        {% if dossiers.service.id == app.user.service.id %}
+                                            <a  href="{{ path('app_service_update_dossier',{dossier:dossiers.id, service:service.nomService}) }}"><label class="badge badge-warning mr-1"><i class="fa fa-edit"  data-toggle="tooltip" data-placement="top" title="Modifier"></i></label></a>
+                                            <a  href="{{ path('app_supprimer_dossier',{dossier:dossiers.id,service:service.id})}}"><label class="badge badge-danger"><i class="fa fa-trash-o "  data-toggle="tooltip" data-placement="top" title="Supprimer"></i></label></a>
+                                        {% endif %}
                                     </td>
                                     <td><label class="badge badge-info">En cours</label></td>
                                 </tr>
@@ -57,7 +56,7 @@
             </div>
         </div>
     </div>
-
+    </div>
 {% endblock %}
 
 
